--- a/brix-demo/pom.xml
+++ b/brix-demo/pom.xml
@@ -53,6 +53,7 @@
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
     			<artifactId>jetty-maven-plugin</artifactId>
+				<version>11.0.15</version>
 				<configuration>
 					<contextPath>/brixdemo</contextPath>
 					<connectors>
