--- a/brix-demo/pom.xml
+++ b/brix-demo/pom.xml
@@ -53,7 +53,14 @@
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
     			<artifactId>jetty-maven-plugin</artifactId>
-				<version>11.0.15</version>
+				<version>9.4.53.v20231009</version>
+				<dependencies>
+					<dependency>
+						<groupId>javax.servlet</groupId>
+						<artifactId>javax.servlet-api</artifactId>
+						<version>3.1.0</version>
+					</dependency>
+				</dependencies>
 				<configuration>
 					<contextPath>/brixdemo</contextPath>
 					<connectors>
@@ -147,8 +154,8 @@
 			<artifactId>slf4j-log4j12</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
