--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 
 	<properties>
 		<!-- brix version is now set here -->
-		<revision>9.0.2</revision>
+		<revision>9.0.3</revision>
 		<changelist>-SNAPSHOT</changelist>
 
 		<maven.compiler.source>17</maven.compiler.source>
@@ -59,14 +59,14 @@
 		<deployment.disabled>false</deployment.disabled>
 		<sources.disabled>false</sources.disabled>
 
-		<wicket.version>9.14.0</wicket.version>
-		<inmethod.grid.version>9.9.0</inmethod.grid.version>
-		<jetty.version>9.4.43.v20210629</jetty.version>
+		<wicket.version>9.15.0</wicket.version>
+		<inmethod.grid.version>9.15.0</inmethod.grid.version>
+		<jetty.version>9.4.53.v20231009</jetty.version>
 		<htmllexer.version>2.1</htmllexer.version>
 		<jackrabbit.version>2.20.3</jackrabbit.version>
 		<jackrabbit.oak-api.version>1.34.0</jackrabbit.oak-api.version>
 		<servlet-api.version>3.1.0</servlet-api.version>
-		<felix.maven-bundle-plugin>5.1.2</felix.maven-bundle-plugin>
+		<felix.maven-bundle-plugin>5.1.9</felix.maven-bundle-plugin>
 	</properties>
 
 	<dependencyManagement>
@@ -213,7 +213,7 @@
 			<dependency>
 				<groupId>com.thoughtworks.xstream</groupId>
 				<artifactId>xstream</artifactId>
-				<version>1.4.19</version>
+				<version>1.4.20</version>
 			</dependency>
 			<dependency>
 				<groupId>org.ogce</groupId>
@@ -271,22 +271,22 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>1.6.6</version>
+				<version>2.0.9</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-log4j12</artifactId>
-				<version>1.6.6</version>
+				<version>2.0.9</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>jcl-over-slf4j</artifactId>
-				<version>1.6.6</version>
+				<version>2.0.9</version>
 			</dependency>
 			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.16</version>
+				<groupId>org.apache.logging.log4j</groupId>
+				<artifactId>log4j-core</artifactId>
+				<version>2.20.0</version>
 			</dependency>
 
 			<!--+ | JETTY + -->
