--- a/brix-plugin-menu/pom.xml
+++ b/brix-plugin-menu/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>brix-plugin-menu</artifactId>
     <version>${revision}${changelist}</version>
 
-    <packaging>bundle</packaging>
+    <packaging>jar</packaging>
 
     <name>Brix Menu System Plugin</name>
 
@@ -30,26 +30,7 @@
 
      <build>
          <plugins>
-             <plugin>
-                 <groupId>org.apache.felix</groupId>
-                 <artifactId>maven-bundle-plugin</artifactId>
-                 <version>${felix.maven-bundle-plugin}</version>
-                 <extensions>true</extensions>
-                 <configuration>
-                     <instructions>
-                         <Export-Package>
-                             org.brixcms.plugin.menu
-                         </Export-Package>
-                         <Import-Package>
-                             org.osgi*, org.brixcms.*, com.inmethod.grid.*, javax.jcr, javax.swing.tree,
-                             org.apache.wicket.*
-                         </Import-Package>
-                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId};singleton:=true
-                         </Bundle-SymbolicName>
-                         <Bundle-RequiredExecutionEnvironment>JavaSE-11</Bundle-RequiredExecutionEnvironment>
-                     </instructions>
-                 </configuration>
-             </plugin>
+
          </plugins>
      </build>
 </project>
