--- a/brix-plugin-publish/pom.xml
+++ b/brix-plugin-publish/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>brix-plugin-publish</artifactId>
     <version>${revision}${changelist}</version>
 
-    <packaging>bundle</packaging>
+    <packaging>jar</packaging>
 
     <name>Brix Site Publishing Workflow Plugin</name>
 
@@ -30,26 +30,7 @@
 
      <build>
          <plugins>
-             <plugin>
-                 <groupId>org.apache.felix</groupId>
-                 <artifactId>maven-bundle-plugin</artifactId>
-                 <version>${felix.maven-bundle-plugin}</version>
-                 <extensions>true</extensions>
-                 <configuration>
-                     <instructions>
-                         <Export-Package/>
-                         <Import-Package>
-                             org.osgi*,org.brixcms, org.brixcms.auth, org.brixcms.jcr.api, org.brixcms.plugin.site,
-                             org.brixcms.web.generic, org.brixcms.web.tab,
-                             org.brixcms.workspace, org.apache.wicket, org.apache.wicket.markup.html.link,
-                             org.apache.wicket.markup.html.panel, org.apache.wicket.model
-                         </Import-Package>
-                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId};singleton:=true
-                         </Bundle-SymbolicName>
-                         <Bundle-RequiredExecutionEnvironment>JavaSE-11</Bundle-RequiredExecutionEnvironment>
-                     </instructions>
-                 </configuration>
-             </plugin>
+
          </plugins>
      </build>
 </project>
