--- a/brix-workspace/pom.xml
+++ b/brix-workspace/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>brix-workspace</artifactId>
     <version>${revision}${changelist}</version>
 
-    <packaging>bundle</packaging>
+    <packaging>jar</packaging>
 
     <name>Brix JCR Workspace Manager Addon</name>
     <description>Adds a WorkspaceManager that fills in the void of
@@ -122,25 +122,7 @@
                  </configuration>
                  <version>2.0.2</version>
              </plugin>
-             <plugin>
-                 <groupId>org.apache.felix</groupId>
-                 <artifactId>maven-bundle-plugin</artifactId>
-                 <version>${felix.maven-bundle-plugin}</version>
-                 <extensions>true</extensions>
-                 <configuration>
-                     <instructions>
-                         <Export-Package>
-                             org.brixcms.workspace.rmi,org.brixcms.workspace
-                         </Export-Package>
-                         <Import-Package>
-                             org.osgi*, javax.jcr, javax.jcr.lock, javax.jcr.observation, org.slf4j
-                         </Import-Package>
-                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId};singleton:=true
-                         </Bundle-SymbolicName>
-                         <Bundle-RequiredExecutionEnvironment>JavaSE-11</Bundle-RequiredExecutionEnvironment>
-                     </instructions>
-                 </configuration>
-             </plugin>
+
         </plugins>
     </build>
 </project>
