--- a/brix-wrapper/pom.xml
+++ b/brix-wrapper/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>brix-wrapper</artifactId>
     <version>${revision}${changelist}</version>
 
-    <packaging>bundle</packaging>
+    <packaging>jar</packaging>
 
     <name>Brix JCR API Wrapper</name>
     <description>A thin wrapper around the JCR API to remove the annoying
@@ -43,28 +43,7 @@
 
      <build>
          <plugins>
-             <plugin>
-                 <groupId>org.apache.felix</groupId>
-                 <artifactId>maven-bundle-plugin</artifactId>
-                 <version>${felix.maven-bundle-plugin}</version>
-                 <extensions>true</extensions>
-                 <configuration>
-                     <instructions>
-                         <Export-Package>
-                             org.brixcms.jcr.base,
-                             org.brixcms.jcr.api,org.brixcms.jcr.exception,org.brixcms.jcr.api.wrapper,org.brixcms.jcr.base.event,org.brixcms.jcr.base.action
-                         </Export-Package>
-                         <Import-Package>
-                             org.osgi*, javax.jcr, javax.jcr.lock, javax.jcr.nodetype, javax.jcr.observation,
-                             javax.jcr.query, javax.jcr.query.qom, javax.jcr.retention, javax.jcr.security,
-                             javax.jcr.version, org.xml.sax
-                         </Import-Package>
-                         <Bundle-SymbolicName>${project.groupId}.${project.artifactId};singleton:=true
-                         </Bundle-SymbolicName>
-                         <Bundle-RequiredExecutionEnvironment>JavaSE-11</Bundle-RequiredExecutionEnvironment>
-                     </instructions>
-                 </configuration>
-             </plugin>
+
          </plugins>
      </build>
 </project>
