--- a/brix-plugin-webdavurl/pom.xml
+++ b/brix-plugin-webdavurl/pom.xml
@@ -23,8 +23,8 @@
             <version>${revision}${changelist}</version>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
