--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 
 	<properties>
 		<!-- brix version is now set here -->
-		<revision>9.0.14</revision>
+		<revision>10.0.0</revision>
 		<changelist>-SNAPSHOT</changelist>
 
 		<maven.compiler.source>17</maven.compiler.source>
@@ -59,13 +59,14 @@
 		<deployment.disabled>false</deployment.disabled>
 		<sources.disabled>false</sources.disabled>
 
-		<wicket.version>9.18.0</wicket.version>
-		<inmethod.grid.version>9.18.0</inmethod.grid.version>
-		<jetty.version>9.4.53.v20231009</jetty.version>
+		<wicket.version>10.1.0</wicket.version>
+		<inmethod.grid.version>10.1.0</inmethod.grid.version>
+		<wicketstuff.modalwindow9.version>10.1.0-SNAPSHOT</wicketstuff.modalwindow9.version>
+		<jetty.version>12.0.13</jetty.version>
 		<htmllexer.version>2.1</htmllexer.version>
 		<jackrabbit.version>2.20.3</jackrabbit.version>
 		<jackrabbit.oak-api.version>1.34.0</jackrabbit.oak-api.version>
-		<servlet-api.version>3.1.0</servlet-api.version>
+		<servlet-api.version>5.0.0</servlet-api.version>
 	</properties>
 
 	<dependencyManagement>
@@ -133,11 +134,13 @@
 			</dependency>
 
 			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>javax.servlet-api</artifactId>
+				<groupId>jakarta.servlet</groupId>
+				<artifactId>jakarta.servlet-api</artifactId>
 				<version>${servlet-api.version}</version>
 				<scope>provided</scope>
 			</dependency>
+
+
 
 			<!--+ | JCR + -->
 			<dependency>
@@ -290,8 +293,8 @@
 
 			<!--+ | JETTY + -->
 			<dependency>
-				<groupId>org.eclipse.jetty.aggregate</groupId>
-				<artifactId>jetty-all</artifactId>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-server</artifactId>
 				<version>${jetty.version}</version>
 				<scope>test</scope>
 				<classifier>uber</classifier>
@@ -320,6 +323,21 @@
 				<groupId>org.wicketstuff</groupId>
 				<artifactId>wicketstuff-inmethod-grid</artifactId>
 				<version>${inmethod.grid.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.slf4j</groupId>
+						<artifactId>slf4j-log4j12</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>log4j</groupId>
+						<artifactId>log4j</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.wicketstuff</groupId>
+				<artifactId>wicketstuff-modalwindow9</artifactId>
+				<version>${wicketstuff.modalwindow9.version}</version>
 				<exclusions>
 					<exclusion>
 						<groupId>org.slf4j</groupId>
@@ -579,8 +597,8 @@
 					</executions>
 				</plugin>
 				<plugin>
-					<groupId>org.eclipse.jetty</groupId>
-					<artifactId>jetty-maven-plugin</artifactId>
+					<groupId>org.eclipse.jetty.ee10</groupId>
+					<artifactId>jetty-ee10-maven-plugin</artifactId>
 					<version>${jetty.version}</version>
 				</plugin>
 				<plugin>
