--- a/brix-jackrabbit/pom.xml
+++ b/brix-jackrabbit/pom.xml
@@ -30,10 +30,10 @@
             <groupId>javax.jcr</groupId>
             <artifactId>jcr</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.apache.jackrabbit</groupId>
-            <artifactId>oak-jackrabbit-api</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.apache.jackrabbit</groupId>-->
+<!--            <artifactId>oak-jackrabbit-api</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.apache.jackrabbit</groupId>
             <artifactId>jackrabbit-core</artifactId>
