--- a/brix-plugin-snapshot/pom.xml
+++ b/brix-plugin-snapshot/pom.xml
@@ -28,8 +28,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+			<version>5.0.0</version>
         </dependency>
     </dependencies>
 
