--- a/brix-workspace/pom.xml
+++ b/brix-workspace/pom.xml
@@ -117,10 +117,9 @@
              <plugin>
                  <artifactId>maven-compiler-plugin</artifactId>
                  <configuration>
-                     <source>11</source>
-                     <target>11</target>
+					<release>17</release>
                  </configuration>
-                 <version>2.0.2</version>
+                 <version>3.14.0</version>
              </plugin>
 
         </plugins>
