--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 
 	<properties>
 		<!-- brix version is now set here -->
-		<revision>9.0.15</revision>
+		<revision>10.0.0</revision>
 		<changelist>-SNAPSHOT</changelist>
 
 		<maven.compiler.source>17</maven.compiler.source>
@@ -59,13 +59,13 @@
 		<deployment.disabled>false</deployment.disabled>
 		<sources.disabled>false</sources.disabled>
 
-		<wicket.version>9.18.0</wicket.version>
-		<inmethod.grid.version>9.18.0</inmethod.grid.version>
-		<jetty.version>9.4.53.v20231009</jetty.version>
+		<wicket.version>10.6.0</wicket.version>
+		<inmethod.grid.version>10.6.0</inmethod.grid.version>
+		<jetty.version>11.0.26</jetty.version>
 		<htmllexer.version>2.1</htmllexer.version>
 		<jackrabbit.version>2.20.3</jackrabbit.version>
 		<jackrabbit.oak-api.version>1.34.0</jackrabbit.oak-api.version>
-		<servlet-api.version>3.1.0</servlet-api.version>
+		<servlet-api.version>5.0.0</servlet-api.version>
 	</properties>
 
 	<dependencyManagement>
@@ -133,8 +133,8 @@
 			</dependency>
 
 			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>javax.servlet-api</artifactId>
+				<groupId>jakarta.servlet</groupId>
+				<artifactId>jakarta.servlet-api</artifactId>
 				<version>${servlet-api.version}</version>
 				<scope>provided</scope>
 			</dependency>
@@ -289,13 +289,11 @@
 			</dependency>
 
 			<!--+ | JETTY + -->
-			<dependency>
-				<groupId>org.eclipse.jetty.aggregate</groupId>
-				<artifactId>jetty-all</artifactId>
-				<version>${jetty.version}</version>
-				<scope>test</scope>
-				<classifier>uber</classifier>
-			</dependency>
+            <dependency>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-webapp</artifactId>
+                <version>${jetty.version}</version>
+            </dependency>
 
 			<!--+ | UNIT TESTING + -->
 			<dependency>
@@ -454,7 +452,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>2.4</version>
 				<configuration>
 					<skipSource>${sources.disabled}</skipSource>
 				</configuration>
@@ -483,15 +480,14 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.11.0</version>
+					<version>3.14.0</version>
 					<configuration>
-						<source>${maven.compiler.source}</source>
-						<target>${maven.compiler.target}</target>
 						<debug>true</debug>
 						<optimize>true</optimize>
 						<showDeprecation>true</showDeprecation>
 						<showWarnings>true</showWarnings>
 						<verbose>false</verbose>
+						<release>17</release>
 					</configuration>
 				</plugin>
 				<plugin>
