--- a/brix-demo/pom.xml
+++ b/brix-demo/pom.xml
@@ -50,31 +50,49 @@
 			</testResource>
 		</testResources>
 		<plugins>
-			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-    			<artifactId>jetty-maven-plugin</artifactId>
-				<version>${jetty.version}</version>
-				<configuration>
-					<contextPath>/brixdemo</contextPath>
-					<connectors>
-						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-							<port>8080</port>
-							<maxIdleTime>3600000</maxIdleTime>
-						</connector>
-						<connector implementation="org.eclipse.jetty.server.ssl.SslSocketConnector">
-							<port>8443</port>
-							<maxIdleTime>3600000</maxIdleTime>
-							<keystore>${project.build.directory}/brixdemo/WEB-INF/keystore</keystore>
-							<password>password</password>
-							<keyPassword>password</keyPassword>
-						</connector>
-					</connectors>
-				</configuration>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.eclipse.jetty</groupId>-->
+<!--    			<artifactId>jetty-maven-plugin</artifactId>-->
+<!--				<version>${jetty.version}</version>-->
+<!--				<configuration>-->
+<!--					<contextPath>/brixdemo</contextPath>-->
+<!--					<connectors>-->
+<!--						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">-->
+<!--							<port>8080</port>-->
+<!--							<maxIdleTime>3600000</maxIdleTime>-->
+<!--						</connector>-->
+<!--						<connector implementation="org.eclipse.jetty.server.ssl.SslSocketConnector">-->
+<!--							<port>8443</port>-->
+<!--							<maxIdleTime>3600000</maxIdleTime>-->
+<!--							<keystore>${project.build.directory}/brixdemo/WEB-INF/keystore</keystore>-->
+<!--							<password>password</password>-->
+<!--							<keyPassword>password</keyPassword>-->
+<!--						</connector>-->
+<!--					</connectors>-->
+<!--				</configuration>-->
+<!--			</plugin>-->
 			<plugin>
 				<artifactId>maven-eclipse-plugin</artifactId>
 				<configuration>
 					<downloadSources>true</downloadSources>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>3.4.0</version>
+			</plugin>
+			<plugin>
+				<groupId>io.openliberty.tools</groupId>
+				<artifactId>liberty-maven-plugin</artifactId>
+				<version>3.10.3</version>
+				<configuration>
+					<runtimeArtifact>
+						<groupId>io.openliberty</groupId>
+						<artifactId>openliberty-runtime</artifactId>
+						<version>25.0.0.11</version>
+						<type>zip</type>
+					</runtimeArtifact>
+					<looseApplication>true</looseApplication>
 				</configuration>
 			</plugin>
 		</plugins>
