--- a/brix-demo/src/main/webapp/WEB-INF/web.xml
+++ b/brix-demo/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,10 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-<web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                             https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+         version="6.0">
+
     <display-name>org.brixcms-demo</display-name>
 
     <!--+
@@ -29,7 +34,7 @@
     <!--+
     | WEB DAV SUPPORT
     +-->
-    //disabled WebDav for wicket 10 as Jackrabbit is not yet jakarta.*
+<!--    disabled WebDav for wicket 10 as Jackrabbit is not yet jakarta.*-->
 <!--    <servlet>-->
 <!--        <servlet-name>SimpleWebDav</servlet-name>-->
 <!--        <servlet-class>org.brixcms.demo.web.dav.SimpleServlet</servlet-class>-->
