--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,7 @@
 		<revision>10.7.0</revision>
 		<changelist>-SNAPSHOT</changelist>
 
-		<maven.compiler.source>17</maven.compiler.source>
-		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.release>17</maven.compiler.release>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
