--- a/pom.xml
+++ b/pom.xml
@@ -268,7 +268,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
-				<artifactId>slf4j-log4j12</artifactId>
+				<artifactId>slf4j-reload4j</artifactId>
 				<version>2.0.9</version>
 			</dependency>
 			<dependency>
@@ -315,7 +315,7 @@
 				<exclusions>
 					<exclusion>
 						<groupId>org.slf4j</groupId>
-						<artifactId>slf4j-log4j12</artifactId>
+					<artifactId>slf4j-reload4j</artifactId>
 					</exclusion>
 					<exclusion>
 						<groupId>log4j</groupId>
@@ -477,7 +477,6 @@
 					<version>3.14.0</version>
 					<configuration>
 						<debug>true</debug>
-						<optimize>true</optimize>
 						<showDeprecation>true</showDeprecation>
 						<showWarnings>true</showWarnings>
 						<verbose>false</verbose>
